attempting to fix swagger host local host issues
